<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".banks">

    <Button
        android:id="@+id/butt7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newcount"
        android:onClick="clickButt7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <Button
        android:id="@+id/butt8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/costs"
        android:onClick="clickButt8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <Button
        android:id="@+id/butt9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/banks"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>

